@@ -4,6 +4,7 @@ PostGIS 1.1.3CVS
 	  EMPTY elements (still supported for GEOMETRYCOLLECTION).
 	- Added --with-proj-libdir and --with-geos-libdir configure
 	  switches
+	- Improved JDBC regression tests: MultiPoint and scientific ordinates
 
 PostGIS 1.1.2
 2006/03/30
